# YAGBER

./: .env  .env.template  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml  tests.yml
benches/: emulator_bench.rs
crates/app/: Cargo.toml
crates/app/src/: callback_queue.rs  control_event.rs  cycle_events.rs  downcast.rs  emulator.rs  lib.rs  plugin.rs  speed_mode.rs  state.rs
crates/app/src/components/: component.rs  component_bus.rs  mod.rs
crates/app/src/events/: event.rs  event_bus.rs  event_queue.rs  event_sender.rs  mod.rs
crates/app/src/runners/: headless_runner.rs  mod.rs  runner.rs
crates/apu/: Cargo.toml
crates/apu/src/: apu.rs  audio_buffer.rs  divapu.rs  high_pass_filter.rs  lib.rs  sweep.rs
crates/apu/src/channels/: ch1.rs  envelope.rs  mod.rs  noise_channel.rs  pulse_channel.rs  wave_channel.rs
crates/clock/: Cargo.toml
crates/clock/src/: lib.rs  stopwatch.rs  time.rs  timer.rs  wall_clock.rs
crates/cpal/: Cargo.toml
crates/cpal/src/: lib.rs  output_stream.rs
crates/cpu/: Cargo.toml
crates/cpu/src/: cpu.rs  cycle_clock.rs  ime.rs  instruction.rs  interrupt.rs  lib.rs  ram.rs  registers.rs
crates/cpu/src/alu/: alu16.rs  alu8.rs  mod.rs
crates/cpu/src/instructions/: binary_utils.rs  condition_code.rs  instruction.rs  instruction_type.rs  mod.rs
crates/display/: Cargo.toml
crates/display/src/: display.rs  input_converter.rs  lib.rs  winit_app.rs  winit_runner.rs
crates/dma/: Cargo.toml
crates/dma/src/: dma.rs  hdma.rs  lib.rs
crates/input/: Cargo.toml
crates/input/src/: emulation_control.rs  input.rs  input_event.rs  input_event_queue.rs  input_state.rs  joyp_input_state.rs  key_state.rs  lib.rs
crates/input/src/physical_input/: keyboard.rs
crates/link_cable/: Cargo.toml
crates/link_cable/src/: dest.rs  lib.rs  link_cable.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: boot_rom.rs  bus.rs  cartridge.rs  cram.rs  events.rs  interrupt.rs  lib.rs  memory_wrapper.rs  oam.rs  observer.rs  ram.rs  register.rs  vram.rs  wram.rs
crates/memory/src/cartridges/: cartridge.rs  cartridge_header.rs  cartridge_mbc_info.rs  external_ram_address.rs  mod.rs  rtc.rs
crates/memory/src/cartridges/mbc/: mbc0.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
crates/memory/src/cartridges/save/: memory_backend.rs  native_file_backend.rs  save_backend.rs
crates/memory/src/cartridges/saves/: memory_backend.rs  mod.rs  native_file_backend.rs  save.rs  save_backend.rs
crates/memory/src/io_registers/: audena.rs  audenv.rs  audgo.rs  audlen.rs  audpoly.rs  audsweep.rs  audterm.rs  audvol.rs  cram_register.rs  div.rs  io_bus.rs  io_register.rs  io_type.rs  joyp.rs  lcdc.rs  mod.rs  opri.rs  spd.rs  stat.rs  sys.rs  unconnect_register.rs  vbk.rs  wav_ram.rs
crates/memory/src/mbc/: mbc0.rs  mbc1.rs  mbc2.rs  mbc3.rs  mod.rs
crates/memory/src/save/: mod.rs  native_file_backend.rs  save_backend.rs
crates/ppu/: Cargo.toml
crates/ppu/src/: dma.rs  dot_clock.rs  lib.rs  mode.rs  ppu.rs  ppu_mode.rs  ppu_mode_observer.rs  scan_line.rs  tile.rs
crates/ppu/src/models/: attribute.rs  colour.rs  dmg_pallet.rs  fifo_pixel.rs  mod.rs  object.rs  tile.rs  window.rs
crates/ram/: Cargo.toml
crates/ram/src/: boot_rom.rs  bus.rs  interrupt.rs  io_registers.rs  lib.rs  memory.rs  observer.rs  ram.rs  rom.rs
crates/ram/src/io_registers/: io_bus.rs  mod.rs
crates/ram/src/mbc/: mbc1.rs  mod.rs
crates/timer/: Cargo.toml
crates/timer/src/: edge_detector.rs  lib.rs  ram_observer.rs  timer.rs
docs/: compatibility.md  scripts.md  testing.md
scripts/: fetch_test_roms.rs
src/: emulator.rs  lib.rs  main.rs
src/runners/: headless_runner.rs  runner.rs
tests/test_roms/: main.rs  utils.rs
tests/test_roms/acid2/: cgb_acid2.rs  dmg_acid2.rs  mod.rs
tests/test_roms/blargg/: cpu_instrs.rs  halt_bug.rs  mod.rs
tests/test_roms/gb_test_roms/: cpu_instrs.rs  halt_bug.rs  mod.rs
tests/test_roms/little_things_gb/: double_halt_cancel_gbconly.rs  mod.rs
tests/test_roms/mts/: mod.rs
tests/test_roms/mts/acceptance/instr/: daa.rs  mod.rs
