[package]
name = "yagber"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    # oficial components of this emulator
    "crates/*",
]

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenv = { workspace = true }
yagber_ram = { path = "crates/ram" }
yagber_cpu = { path = "crates/cpu" }
yagber_ppu = { path = "crates/ppu" }
yagber_clock = { path = "crates/clock" }

[workspace.dependencies]
anyhow = { version = "1.0.98" }
arbitrary-int = { version = "1.3.0" }
dotenv = { version = "0.15.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
yagber_cpu = { path = "crates/cpu" }
yagber_clock = { path = "crates/clock" }
yagber_ppu = { path = "crates/ppu" }
yagber_ram = { path = "crates/ram" }
