[package]
name = "yagber"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    # Official components of this emulator
    "crates/*",
]

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
dotenv = { workspace = true }

yagber_app = { workspace = true }
yagber_memory = { workspace = true }
yagber_cpu = { workspace = true }
yagber_ppu = { workspace = true }
yagber_clock = { workspace = true }
yagber_link_cable = { workspace = true }
yagber_timer = { workspace = true }
yagber_display = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1.0.98" }
arbitrary-int = { version = "1.3.0" }
dotenv = { version = "0.15.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
pretty_assertions = { version = "1.4.1" }

yagber_app = { path = "crates/app" }
yagber_cpu = { path = "crates/cpu" }
yagber_clock = { path = "crates/clock" }
yagber_ppu = { path = "crates/ppu" }
yagber_memory = { path = "crates/memory" }
yagber_link_cable = { path = "crates/link_cable" }
yagber_timer = { path = "crates/timer" }
yagber_display = { path = "crates/display" }
