[package]
name = "yagber_cpal"
version = "0.1.0"
edition = "2024"

[features]
default = []
trace = ["dep:tracing"]

[dependencies]
ringbuf = { workspace = true }
tracing = { workspace = true, optional = true }
cpal = { version = "0.16.0" }

yagber_app = { workspace = true }
yagber_apu = { workspace = true }
