[package]
name = "yagber_display"
version = "0.1.0"
edition = "2024"

[features]
default = []
trace = ["dep:tracing"]
trace-span = ["dep:tracing"]
frame_marker = []

[dependencies]
tracing = { workspace = true, optional = true }
winit = { version = "0.30.11" }
pixels = { version = "0.15.0" }

yagber_app = { workspace = true }
