[package]
name = "yagber_input"
version = "0.1.0"
edition = "2024"

[features]
default = []
trace = ["dep:tracing"]

[dependencies]
smol_str = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true, optional = true }

yagber_app = { workspace = true }
yagber_memory = { workspace = true }
