[package]
name = "yagber_log"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracing-chrome = ["dep:tracing-chrome", "dep:chrono"]
tracing-tracy = ["dep:tracing-tracy"]

[dependencies]
chrono = { workspace = true, optional = true }
dotenv = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tracing-chrome = { version = "0.7.2", optional = true }
# Tracy tracing compatibility table: https://github.com/nagisa/rust_tracy_client
tracing-tracy = { version = "0.11.4", optional = true }

yagber_app = { workspace = true }
