[package]
name = "yagber_memory"
version = "0.1.0"
edition = "2024"

[features]
default = []
break_on_unitialized_ram_read = []
trace = ["dep:tracing"]

[dependencies]
arbitrary-int = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true, optional = true }

yagber_app = { workspace = true }
