[package]
name = "yagber_memory"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
warn_on_unitialized_ram_read = []
trace = ["dep:tracing"]
trace-span = ["dep:tracing"]
native = []

[dependencies]
arbitrary-int = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true, optional = true }

yagber_app = { workspace = true }
